--- a/raids/r2s.yaml
+++ b/raids/r2s.yaml
@@ -5,7 +5,7 @@ modified: 2025-03-14
 by:
   id: 27637301
   role: author
-tier: Light-heavyweight
+tier: AAC Light-heavyweight
 boss: Honey B Lovely
 HP: 83966736
 party_hp: 120000
