--- a/calendar.yaml
+++ b/calendar.yaml
@@ -717,6 +717,16 @@
   short: Patch 7.25
   type: patch
   at: 2025-05-27 10:00:00
+- name: Patch 7.25.1 Maintenance
+  short: Maintenance
+  type: maintenance
+  color: "#5a8696"
+  from: 2025-06-16 20:00:00
+  to: 2025-06-17 10:00:00
+- name: Patch 7.25.1 (Hotfix)
+  short: Patch 7.25.1
+  type: patch
+  at: 2025-06-17 10:00:00
 - name: Letter from the Producer Live Part LXXXVII
   short: PLL LXXXVI
   type: live letter
