--- a/calendar.yaml
+++ b/calendar.yaml
@@ -574,12 +574,12 @@
   type: patch
   color: "#6e9cec"
   at: 2024-06-28 09:00:00
-- name: Arcadion (Patch 7.01)
+- name: Light-heavyweight (Patch 7.01)
   short: Patch 7.01
   type: patch
   at: 2024-07-16
   allDay: true
-- name: Arcadion Savage (Patch 7.05)
+- name: Light-heavyweight (Patch 7.05)
   short: Patch 7.05
   type: patch
   at: 2024-07-30
