--- a/raids/m4s.yaml
+++ b/raids/m4s.yaml
@@ -10,6 +10,7 @@ boss: Wicked Thunder
 HP: 114525943
 party_hp: 120000
 wip: [guide, damage, diagrams]
+alias: [r4s]
 description: |
   The first final turn in more than 4 years without a checkpoint, Wicked Thunder uses electrope to transform both herself as well as her foes into living armaments to wield against them.
 status:
